# kindle-bot

./: Dockerfile  Dockerfile.txt  main.py  pyproject.toml
