[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.13"
python-telegram-bot = {extras = ["job-queue"], version = "^21.0.1"}
requests = "^2.31.0"
replit = "^3.2.4"
telegram = "^0.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"